// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should initialize without crash and match snapshot 1`] = `
<main
  className="background"
>
  <Grid
    edgeLength={4}
    handleCellclick={[Function]}
    isSolved={false}
    tiles={
      Array [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        0,
        15,
      ]
    }
  />
  <button
    className="button-reset"
    onClick={[Function]}
  >
    RESET
  </button>
</main>
`;

exports[`Game Workflow should initialize without crash and match snapshot 1`] = `
<App>
  <main
    className="background"
  >
    <Grid
      edgeLength={4}
      handleCellclick={[Function]}
      isSolved={false}
      tiles={
        Array [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          0,
          15,
        ]
      }
    >
      <div
        className="grid"
      >
        <Cell
          displayValue={1}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            1
          </div>
        </Cell>
        <Cell
          displayValue={2}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            2
          </div>
        </Cell>
        <Cell
          displayValue={3}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            3
          </div>
        </Cell>
        <Cell
          displayValue={4}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            4
          </div>
        </Cell>
        <div />
        <Cell
          displayValue={5}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            5
          </div>
        </Cell>
        <Cell
          displayValue={6}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            6
          </div>
        </Cell>
        <Cell
          displayValue={7}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            7
          </div>
        </Cell>
        <Cell
          displayValue={8}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            8
          </div>
        </Cell>
        <div />
        <Cell
          displayValue={9}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            9
          </div>
        </Cell>
        <Cell
          displayValue={10}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            10
          </div>
        </Cell>
        <Cell
          displayValue={11}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            11
          </div>
        </Cell>
        <Cell
          displayValue={12}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            12
          </div>
        </Cell>
        <div />
        <Cell
          displayValue={13}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            13
          </div>
        </Cell>
        <Cell
          displayValue={14}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            14
          </div>
        </Cell>
        <Cell
          displayValue={0}
          handleCellclick={[Function]}
        >
          <div
            className="cell cell-empty"
            onClick={[Function]}
          />
        </Cell>
        <Cell
          displayValue={15}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            15
          </div>
        </Cell>
        <div />
      </div>
    </Grid>
    <button
      className="button-reset"
      onClick={[Function]}
    >
      RESET
    </button>
  </main>
</App>
`;

exports[`Game Workflow should show win when the game is solved 1`] = `
<App>
  <main
    className="background"
  >
    <Grid
      edgeLength={4}
      handleCellclick={[Function]}
      isSolved={true}
      tiles={
        Array [
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
          9,
          10,
          11,
          12,
          13,
          14,
          15,
          0,
        ]
      }
    >
      <div
        className="grid"
      >
        <Cell
          displayValue={1}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            1
          </div>
        </Cell>
        <Cell
          displayValue={2}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            2
          </div>
        </Cell>
        <Cell
          displayValue={3}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            3
          </div>
        </Cell>
        <Cell
          displayValue={4}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            4
          </div>
        </Cell>
        <div />
        <Cell
          displayValue={5}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            5
          </div>
        </Cell>
        <Cell
          displayValue={6}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            6
          </div>
        </Cell>
        <Cell
          displayValue={7}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            7
          </div>
        </Cell>
        <Cell
          displayValue={8}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            8
          </div>
        </Cell>
        <div />
        <Cell
          displayValue={9}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            9
          </div>
        </Cell>
        <Cell
          displayValue={10}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            10
          </div>
        </Cell>
        <Cell
          displayValue={11}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            11
          </div>
        </Cell>
        <Cell
          displayValue={12}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            12
          </div>
        </Cell>
        <div />
        <Cell
          displayValue={13}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            13
          </div>
        </Cell>
        <Cell
          displayValue={14}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            14
          </div>
        </Cell>
        <Cell
          displayValue={15}
          handleCellclick={[Function]}
        >
          <div
            className="cell"
            onClick={[Function]}
          >
            15
          </div>
        </Cell>
        <Cell
          displayValue={0}
          handleCellclick={[Function]}
        >
          <div
            className="cell cell-empty"
            onClick={[Function]}
          />
        </Cell>
        <div />
        <Overlay
          displayText="WIN"
        >
          <div
            className="overlay"
          >
            WIN
          </div>
        </Overlay>
      </div>
    </Grid>
    <button
      className="button-reset"
      onClick={[Function]}
    >
      RESET
    </button>
  </main>
</App>
`;
